--- a/VisualizingAudioSpectrum.html
+++ b/VisualizingAudioSpectrum.html
@@ -3,97 +3,76 @@
 <head>
     <title>JavaScript Spectrum Example</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/radioTitle.js"></script>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div id="wrapper">
     <div id="infa">
         <span id="track-title">Live</span>
     </div>
-    <audio id="audio-element"
-           src="http://radio.yshivangoga.ru/mp3128"
-           controls=""
-           style="width: 512px;">
-    </audio>
-    <div>
-        <canvas id="fft" width="512" height="200"></canvas>
-    </div>
+    <div id="chart" style="width: 800px; height: 250px"></div>
+    <!--<audio id="audio-element"-->
+    <!--src="http://radio.yshivangoga.ru/mp3128"-->
+    <!--controls=""-->
+    <!--style="width: 512px;">-->
+    <!--</audio>-->
+    <!--<div>-->
+    <!--<canvas id="fft" width="512" height="200"></canvas>-->
+    <!--</div>-->
 </div>
 <script>
-    /*
-    var stream = 'http://radio.yshivangoga.ru/mp3128';
-    var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-    var analyser = audioCtx.createAnalyser();
-    source = audioCtx.createMediaStreamSource(stream);
+    var AudioContext = window.AudioContext || window.webkitAudioContext,
+            ctx = new AudioContext(),
+            source = audioCtx.createMediaStreamSource(stream),//'http://radio.yshivangoga.ru/mp3128',
+            analyser = ctx.createAnalyser(),
+            processor = ctx.createScriptProcessor(2048, 1, 1),
+            data,
+            chart,
+            dataSource;
     source.connect(analyser);
-    analyser.connect(distortion);
-    distortion.connect(audioCtx.destination);
-    analyser.fftSize = 2048;
-    var bufferLength = analyser.frequencyBinCount;
-    var dataArray = new Uint8Array(bufferLength);
-    //    analyser.getByteTimeDomainData(dataArray);
-    canvasCtx.clearRect(0, 0, WIDTH, HEIGHT);
-    function draw() {
-        drawVisual = requestAnimationFrame(draw);
-        analyser.getByteTimeDomainData(dataArray);
-        canvasCtx.fillStyle = 'rgb(200, 200, 200)';
-        canvasCtx.fillRect(0, 0, WIDTH, HEIGHT);
-        canvasCtx.lineWidth = 2;
-        canvasCtx.strokeStyle = 'rgb(0, 0, 0)';
-        canvasCtx.beginPath();
-        var sliceWidth = WIDTH * 1.0 / bufferLength;
-        var x = 0;
-        for (var i = 0; i < bufferLength; i++) {
-
-            var v = dataArray[i] / 128.0;
-            var y = v * HEIGHT / 2;
-
-            if (i === 0) {
-                canvasCtx.moveTo(x, y);
-            } else {
-                canvasCtx.lineTo(x, y);
+    source.connect(processor);
+    analyser.connect(ctx.destination);
+    processor.connect(ctx.destination);
+    analyser.fftSize = 128;
+    data = new Uint8Array(analyser.frequencyBinCount);
+    processor.onaudioprocess = function () {
+        analyser.getByteFrequencyData(data);
+        console.log(data);
+    };
+    chart = $("#chart").dxChart({
+        dataSource: [],
+        legend: {
+            visible: false
+        },
+        argumentAxis: {
+            label: {
+                visible: false
             }
-
-            x += sliceWidth;
-        }
-        canvasCtx.lineTo(canvas.width, canvas.height / 2);
-        canvasCtx.stroke();
-    }
-    draw();
-    */
-    //////////////////////////////////////////////////
-    function radioTitle() {
-
-        // this is the URL of the json.xml file located on your server.
-        var url = 'http://radio.yshivangoga.ru/json.xsl';
-
-        $.ajax({
-            type: 'GET',
-            url: url,
-            async: true,
-            jsonpCallback: 'parseMusic',
-            contentType: "application/json",
-            dataType: 'jsonp',
-            success: function (json) {
-                // this is the element we're updating that will hold the track title
-                $('#track-title').text(json['/mp3128']['title']);
-                // this is the element we're updating that will hold the listeners count
-                $('#listeners').text(json['/mp3128']['listeners']);
+        },
+        valueAxis: {
+            grid: {
+                visible: false
             },
-            error: function (e) {
-                console.log(e.message);
+            label: {
+                visible: false
             }
+        },
+        series: {
+            hoverMode: "none",
+            type: "bar",
+            color: "#1E90FF"
+        }
+    }).dxChart("instance");
+    data = new Uint8Array(analyser.frequencyBinCount);
+    processor.onaudioprocess = function () {
+        analyser.getByteFrequencyData(data);
+        dataSource = $.map(data, function (item, index) {
+            return {arg: index, val: item};
         });
-
+        chart.option("dataSource", dataSource);
     }
-
-    $(document).ready(function () {
-        setTimeout(function () {
-            radioTitle();
-        }, 1000);
-        setInterval(function () {
-            radioTitle();
-        }, 1000); // we're going to update our html elements / player every 15 seconds
-    });
 </script>
 </body>
 </html>
