--- a/Voice-change-O-matic.html
+++ b/Voice-change-O-matic.html
@@ -6,14 +6,42 @@
 </head>
 <body>
 <script>
+
     var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
     oscillator = audioCtx.createOscillator();
     var gainNode = audioCtx.createGain();
     oscillator.connect(gainNode);
     gainNode.connect(audioCtx.destination);
+
+    var WIDTH = window.innerWidth;
+    var HEIGHT = window.innerHeight;
+
+    var maxFreq = 6000;
+    var maxVol = 1;
+
+    var initialFreq = 3000;
+    var initialVol = 0.5;
+
     oscillator.type = 'sine';
-    oscillator.frequency.value = 2500;
+    oscillator.frequency.value = 440;
     oscillator.start();
+
+    gainNode.gain.value = initialVol;
+
+    var CurX, CurY;
+
+    document.onmousemove = updadePage;
+
+    function updadePage(e) {
+        CurX = (window.Event) ? e.pageX : event.clientX + (document.documentElement.scrollLeft ? document.documentElement.scrollLeft : document.body.scrollLeft);
+        CurY = (window.Event) ? e.pageY : event.clientY + (document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop);
+
+        oscillator.frequency.value = (CurX / WIDTH) * maxFreq;
+        gainNode.gain.value = (CurY / HEIGHT) * maxVol;
+
+        canvasDraw();
+    }
+
 </script>
 </body>
 </html>
