--- a/MediaElementSourceNode.html
+++ b/MediaElementSourceNode.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MediaElementSourceNode</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/radioTitle.js"></script>
 </head>
 <body>
@@ -26,8 +26,8 @@
 
     var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
     var myAudio = document.querySelector('audio');
-    //myAudio.volume = 0.5;
     //myAudio.autoplay = true;
+    //myAudio.volume = 0.5;
     //myAudio.controls = true;
 
     var pre = document.querySelector('pre');
