--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="infa">
         <span id="track-title">Live</span>
     </div>
+    <audio src="http://radio.yshivangoga.ru/mp3128" id="myAudio" controls></audio>
 </div>
 <script>
 
